--- a/src/styles/coin.css
+++ b/src/styles/coin.css
@@ -72,7 +72,15 @@ th {
 }
 
 .about h3 {
+  font-size: 2.5rem;
   margin: 1.5rem 0;
+  line-height: 1.5rem;
+}
+
+.about p {
+  margin: 1.5rem 0;
+  letter-spacing: 1px;
+  line-height: 1.5rem;
 }
 
 @media screen and (max-width: 700px) {
