--- a/src/styles/coin.css
+++ b/src/styles/coin.css
@@ -1,10 +1,17 @@
+.coin-container {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 .coin-container .content {
-  margin: 1.5rem auto;
+  width: 75%;
+  margin: 1rem 0;
   padding: 0.7rem 1rem;
   display: flex;
   flex-direction: column;
   background-color: #f0f8ff;
-  /* box-shadow: 0px 0px 12px #18191b; */
+  box-shadow: 0px 0px 12px #18191b;
   border-radius: 8px;
   overflow-x: hidden;
 }
@@ -14,9 +21,9 @@
 }
 
 .rank-btn {
-  border: 1px solid #6900ff;
-  box-shadow: 0px 0px 8px #6900ff;
-  background-color: #6900ff;
+  border: 1px solid lightgrey;
+  box-shadow: 0px 0px 8px lightgrey;
+  background-color: lightgrey;
   border-radius: 8px;
   padding: 0.2rem;
 }
@@ -36,10 +43,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
-}
-
-.info p {
-  padding-right: 1rem;
 }
 
 table {
@@ -84,9 +87,16 @@ th {
 }
 
 @media screen and (max-width: 700px) {
+  .coin-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
   .coin-container .content {
     max-width: 100%;
-    margin: 1rem;
+    width: 95%;
+    box-shadow: 0px 0px 12px #18191b;
     padding: 0 0.5rem;
   }
 
