--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -6,11 +6,16 @@ body {
   display: flex;
   justify-content: center;
   overflow-x: hidden;
-  background: linear-gradient(90deg, rgba(240, 248, 255, 1) 0%, rgba(233, 245, 255, 1) 35%, rgba(213, 235, 255, 1) 100%);
+  background: linear-gradient(
+    90deg,
+    rgba(240, 248, 255, 1) 0%,
+    rgba(233, 245, 255, 1) 35%,
+    rgba(213, 235, 255, 1) 100%
+  );
 }
 
 html {
-  font-size: 16px;
+  font-size: 13px;
 }
 
 #root {
@@ -23,12 +28,21 @@ html {
 }
 
 .Nav-container {
+  position: fixed;
+  top: 0;
+  padding-top: 1rem;
+  z-index: 5;
   display: flex;
   justify-content: space-between;
-  margin-top: 1rem;
   font-family: Arial, Helvetica, sans-serif;
   color: grey;
   width: 100%;
+  background: linear-gradient(
+    90deg,
+    rgba(240, 248, 255, 1) 0%,
+    rgba(233, 245, 255, 1) 35%,
+    rgba(213, 235, 255, 1) 100%
+  );
 }
 
 .navHeading {
@@ -43,6 +57,12 @@ html {
 
 .searchIcon {
   font-size: 2.8rem;
+}
+
+@media screen and (min-width: 360px) {
+  html {
+    font-size: 16px;
+  }
 }
 
 @media screen and (min-width: 700px) {
