--- a/src/styles/coin.css
+++ b/src/styles/coin.css
@@ -3,6 +3,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-top: 4rem;
 }
 
 .coin-container .content {
@@ -57,9 +58,10 @@ th {
 }
 
 .about p {
-  margin: 1.5rem 0;
+  margin: 24px 0;
   letter-spacing: 1px;
-  line-height: 1.5rem;
+  line-height: 24px;
+  font-size: 16px;
 }
 
 .stats {
